# cmt-playground

./: .gitattributes  .gitignore  CMakeLists.txt
_toml_files/: cpp.toml  load.toml  sample.toml
cmake/macros/: recurse_subproject_dirs.cmake  subproject_dirs.cmake
lib/: README.md
lib/cmt-0/: CMakeLists.txt
lib/cmt-0/include/cmt/: Plugin.hpp  macros.hpp
lib/cmt.0/: CMakeLists.txt
lib/cmt.0/include/cmt/: Plugin.hpp  temp.hpp
lib/cmt.0/include/cmt/internal/: platform.hpp
lib/cmt.0/src/cmt/: temp.cpp
lib/cmt/doc-in-cpp-0/: CMakeLists.txt
lib/cmt/doc-in-cpp-0/include/cmt/doc/in/cpp/: Plugin.hpp
lib/cmt/doc-in-cpp-0/include/cmt/doc/in/cpp/internal/: platform.hpp
lib/cmt/doc-in-cpp-0/src/cmt/doc/in/cpp/: Plugin.cpp
lib/cmt/foo-0/: CMakeLists.txt
lib/cmt/foo-0/include/cmt/foo/: Plugin.hpp
lib/cmt/foo-0/include/cmt/foo/internal/: platform.hpp
lib/cmt/foo-0/src/cmt/foo/: Plugin.cpp
lib/cmt/foo.0/: CMakeLists.txt
lib/cmt/foo.0/include/cmt/foo/: Plugin.hpp
lib/cmt/foo.0/include/cmt/foo/internal/: platform.hpp
lib/cmt/foo.0/src/cmt/foo/: Plugin.cpp
lib/cmt/testplugin-0/: CMakeLists.txt
lib/cmt/testplugin-0/include/cmt/testplugin/: Plugin.hpp  temp.hpp
lib/cmt/testplugin-0/include/cmt/testplugin/internal/: platform.hpp
lib/cmt/testplugin-0/src/cmt/testplugin/: Plugin.cpp
lib/cmt/testplugin.0/: CMakeLists.txt
lib/cmt/testplugin.0/include/cmt/testplugin/: Plugin.hpp
lib/cmt/testplugin.0/src/cmt/testplugin/: Plugin.cpp  temp.cpp
lib/toml-0/: CMakeLists.txt
